Bug #2668 - Small overlap with nav bar and block editor buttons
This issue was due to how the legacy Gutenberg plugin handles the editor nav bar layout and stlyling,
which is different than how core Gutenberg does. The issue is resolved via some targeted styles for the
legacy layout.

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -432,7 +432,7 @@
 					align-items: center;
 					flex: 1 1 0;
 					min-width: 100px;
-					@media (max-width: @screen-sm-max){
+					@media (max-width: @screen-sm-max) {
 						min-width: 50px;
 					}
 					&:after {
@@ -1149,7 +1149,7 @@
 				}
 				#wp-admin-bar-network-menu-mobile,
 				#wp-admin-bar-my-openlab {
-					> .ab-item{
+					> .ab-item {
 						min-width: 140px;
 					}
 					@media (max-width: @screen-xs-max) {
@@ -1266,6 +1266,16 @@ body {
 	}
 	.empty-header-placeholder {
 		display: block;
+	}
+	/**legacy gutenberg plugin conflicts with adminbar styling**/
+	#editor {
+		.components-navigate-regions {
+			.edit-post-editor-regions {
+				position: relative;
+				left: auto;
+				top: auto;
+			}
+		}
 	}
 }
 
